@@ -42,8 +42,11 @@ public abstract class AbstractChainedContextWriter<OK,OV> extends StatsDHelper i
                             + getChainedContextWriterOption());
         }
         try {
-            contextWriter = contextWriterClass.newInstance();
+            contextWriter = contextWriterClass.getDeclaredConstructor().newInstance();
             contextWriter.setup(conf, outputTableCounters);
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            throw new IOException("Failed to initialized " + contextWriterClass + " from property " + getChainedContextWriterOption(), e);
         } catch (Exception e) {
             throw new IOException("Failed to initialized " + contextWriterClass + " from property " + getChainedContextWriterOption(), e);
         }
